--- a/front-end/src/modules/home/Charter/CharterDialog.css
+++ b/front-end/src/modules/home/Charter/CharterDialog.css
@@ -44,10 +44,19 @@ table.folio_charter tr:nth-child(even) {
  #header_individual th{
       background-color: rgb(230, 93, 101);
       color: white;
-      border-top-right-radius: 4px;
-      border-top-left-radius: 4px;
-
+      border-radius: 4px;
  }
+
+ #individual td{
+   /* background-color: rgb(230, 93, 101); */
+   color: black;
+   border-radius: 4px;
+   border: solid 1px rgb(7, 109, 150);;
+   padding: 5px;
+   padding-left: 15px;
+}
+
+
 
 /* Datos contratante */
 .titulo {
